--- a/employee_take_money.html
+++ b/employee_take_money.html
@@ -193,7 +193,7 @@
 
                     var table = `<tr> <td> ${childData.date} </td> <td> ${childData.price} </td> <td> ${childData.note} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${childSnapshot.key}')">حذف </a></td> </tr>`;
                     $('.app-spinner').remove();
-                    myTotal += parseInt(childData.egp);
+                    myTotal += parseFloat(childData.egp);
                     document.getElementById("Customdata").innerHTML += table;
                 });
             });
