--- a/home_page.html
+++ b/home_page.html
@@ -52,7 +52,7 @@
 
             <!-- /.navbar-static-side -->
         </nav>
-
+        <button style="float: left;margin-left: 30pt;" onclick="back()" class="btn btn-danger">رجوع </button>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12" dir="rtl">
@@ -168,6 +168,9 @@
   }
 }
 
+function back(){
+        window.history.back();
+    }
     </script>
 
 </body>
