--- a/employee_home_send.html
+++ b/employee_home_send.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>العامل</title>
+    <title>الصنايعي</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="driver.css" rel="stylesheet">
@@ -138,7 +138,7 @@
                         <button onclick="saveNote()"> حفظ</button>
                         <button onclick="deleteNote()"> حذف</button>
                         <div class="panel-body" dir="rtl">
-                            <h1> البضاعة التى ارسلت للعامل </h1>
+                            <h1> البضاعة التى ارسلت للصنايعي </h1>
 
                             <table width="50%" id="myTable" dir="rtl"
                                 class="table table-striped table-bordered table-hover">
