--- a/staff_take_money.html
+++ b/staff_take_money.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>عمليات التاجر</title>
+    <title></title>
 
     <!-- Bootstrap Core CSS -->
     <link href="driver.css" rel="stylesheet">
@@ -57,6 +57,7 @@
             <div class="row">
                 <div class="col-lg-12" dir="rtl">
                     <button style="float: left;" onclick="back()" class="btn btn-danger">رجوع </button>
+
                     <h2 id="name" style="text-align: center;"></h2>
                 </div>
                 <!-- /.col-lg-12 -->
@@ -67,28 +68,68 @@
                     <div class="panel panel-default">
 
                         <div class="table-responsive">
+                            <table style="width:70%;" id="mytable" class="table table-bordered table-striped">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>
+                                            مصروف جديدة
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>التاريخ</th>
+                                        <td><input id="date" type="date" class="form-control"></textarea></td>
+                                    </tr>
+
+                                    <tr>
+                                        <th>المبلغ </th>
+                                        <td><input id="price" type="number" class="form-control" value="0"
+                                                ></textarea></td>
+                                    </tr>
+                                    <tr>
+                                        <th> ملاحظفات</th>
+                                        <td>
+                                            <input id="note" class="form-control"></textarea>
+                                        </td>
+                                    </tr>
+
+
+                                </tbody>
+                            </table>
+                            <button type="button" style="width:30%;" id="save" onclick="save()"
+                                class="btn btn-outline btn-primary btn-lg btn-block">حفظ</button>
                         </div>
                         <!-- /.panel-heading -->
-                        <br />
-                        <br />
 
 
                         <br />
                         <br />
-                        <div class="panel-body" dir="rtl" id="myDiv">
-                            <h1> جميع البضائع التى ارسلت للتاجر </h1>
+                        <div class="panel-body" dir="rtl">
+                            <h1> المصروفات التى اخذها عامل الورشة  </h1>
 
                             <table width="50%" id="myTable" dir="rtl"
                                 class="table table-striped table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>التاريخ</th>
+                                        <th>المبلغ</th>
+                                        <th> ملاحظات</th>
 
+                                        <th>خيارات</th>
+                                    </tr>
+
+                                </thead>
                                 <tbody id="Customdata">
 
-                                    <td colspan="7" class='app-spinner' style="text-align: center"><i
+                                    <td colspan="4" class='app-spinner' style="text-align: center"><i
                                             class="fa fa-spinner fa-spin" style="font-size:24px"></i></td>
 
                                 </tbody>
                             </table>
-
+                            <br />
+                            <br />
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -137,54 +178,55 @@
         var key = getParameter("key");
         var name = getParameter("name");
         var myTotal = 0;
+
         document.getElementById("name").innerHTML = name
 
         var database = firebase.database();
+        search();
+        function search() {
 
-        fetch();
-        function fetch() {
-
-            database.ref('sendto').child(key).once('value', function (snapshot) {
-                $('.app-spinner').remove();
-
+            database.ref('staff').child(key).child('expenses').on('value', function (snapshot) {
+                document.getElementById("Customdata").innerHTML = ""
+                myTotal = 0
                 snapshot.forEach(function (childSnapshot) {
                     var childData = childSnapshot.val();
-                    console.log(childSnapshot.key);
 
-
-
-                    //document.getElementById("myDiv").innerHTML += childSnapshot.key+"<br/>"
-                    var total = 0;
-                    var table = `<tr> <td colspan="5" style="font-size:20pt;text-align:center"> ${childSnapshot.key} </td> </tr>`;
+                    var table = `<tr> <td> ${childData.date} </td> <td> ${childData.price} </td> <td> ${childData.note} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${childSnapshot.key}')">حذف </a></td> </tr>`;
+                    $('.app-spinner').remove();
+                    myTotal += parseFloat(childData.egp);
                     document.getElementById("Customdata").innerHTML += table;
-
-                    var table = `<tr style="font-size:16pt;"> <td> العدد </td> <td> النوع </td> <td> اللون </td> <td> السعر </td> <td> الاجمالى </td> </tr>`;
-                    document.getElementById("Customdata").innerHTML += table;
-                    childSnapshot.forEach(function (childchildSnapshot) {
-                        var childData = childchildSnapshot.val();
-                        total +=  parseFloat(childData.total)
-                        var table = `<tr style="font-size:16pt;"> <td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> </tr>`;
-                        document.getElementById("Customdata").innerHTML += table;
-
-                    });
-                    var table = `<tr> <td colspan="4" style="font-size:20pt;text-align:end;">  اجمالى الفاتورة الحالية  </td> <td colspan="1" style="font-size:20pt;"> ${total} </td> </tr>`;
-                    document.getElementById("Customdata").innerHTML += table;
-
                 });
-
-                //document.getElementById("my_total").innerHTML = ;
             });
         }
 
+        function save() {
+            var date = document.getElementById("date").value
+            var price = document.getElementById("price").value
+            var note = document.getElementById("note").value
+            if (date != "" && price > 0 ) {
+                database.ref().child('staff').child(key).child('expenses').push().set({
+                    date: date,
+                    note: note,
+                    price: price
+                }, function (error) {
+                    if (error) {
+                        // The write failed...
+                        alert("خطا");
+                    } else {
+                        // Data saved successfully!
+                        alert("تم الحفظ بنجاح");
+                        document.getElementById("date").value = ""
+                        document.getElementById("note").value = ""
+                        document.getElementById("price").value = ""
+                    }
+                });
 
+            } else {
+                alert("خطا برجاء كمل باقى البيانات")
+            }
 
-        // function deleteItem(date, subKey) {
+        }
 
-
-        //     database.ref("sendto").child(key).child(date).child(subKey).remove().then(function () {
-        //         alert("تم الحذف بنجاح");
-        //     });
-        // }
         function getParameter(theParameter) {
             var params = window.location.search.substr(1).split('&');
 
@@ -199,6 +241,14 @@
 
         function back() {
             window.history.back();
+        }
+
+        function deleteItem(subKey) {
+
+
+            database.ref('staff').child(key).child('expenses').child(subKey).remove().then(function () {
+                alert("تم الحذف بنجاح");
+            });
         }
 
     </script>
